
name: vorple
version: 0.0.0.1
cabal-version: >= 1.10
build-type: Simple
license: GPL
license-file: LICENSE
copyright: (c) 2012 Karl Voelker
stability: unstable
homepage: https://github.com/ktvoelker/vorple
maintainer: Karl Voelker <ktvoelker@gmail.com>
synopsis: A simple web framework
description:
  Vorple is a simple web framework for Haskell. You may want to start by looking
  at the example, "Web.Vorple.Example", before looking at the API in "Web.Vorple".
category: Web
author: Karl Voelker <ktvoelker@gmail.com>

Library
  build-depends:
    base >= 3 && < 5,
    split -any,
    mtl -any,
    operational -any,
    template-haskell -any,
    text -any,
    bytestring -any,
    blaze-builder -any,
    dataenc -any,
    Crypto -any,
    random -any,
    aeson -any,
    conduit -any,
    attoparsec -any,
    attoparsec-conduit -any,
    http-types -any,
    cookie -any,
    wai -any
  exposed-modules:
    Web.Vorple
    Web.Vorple.Example
  other-modules:
    Web.Vorple.Cookie
    Web.Vorple.Log
    Web.Vorple.Text
    Web.Vorple.Types
    Web.Vorple.Util
  hs-source-dirs: src
  ghc-options: -Wall -Werror -fno-warn-name-shadowing
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    UndecidableInstances

Executable vorple-example-main
  hs-source-dirs: example
  ghc-options: -Wall -Werror -fno-warn-name-shadowing
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    base >= 3 && < 5,
    mtl -any,
    aeson -any,
    postgresql-simple -any,
    wai-handler-fastcgi -any,
    vorple -any
  default-extensions:
    OverloadedStrings
    RecordWildCards
    TemplateHaskell

Test-Suite vorple-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src test
  ghc-options: -Wall -Werror -fno-warn-name-shadowing -fno-warn-missing-signatures
  default-language: Haskell2010
  main-is: Test.hs
  build-depends:
    base >= 3 && < 5,
    HUnit -any,
    wai-test -any,
    split -any,
    mtl -any,
    operational -any,
    template-haskell -any,
    text -any,
    bytestring -any,
    blaze-builder -any,
    dataenc -any,
    Crypto -any,
    random -any,
    aeson -any,
    conduit -any,
    attoparsec -any,
    attoparsec-conduit -any,
    http-types -any,
    wai -any,
    cookie -any,
    cookie-jar -any,
    time -any
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    UndecidableInstances

Executable vorple-example-listen
  hs-source-dirs: example
  ghc-options: -Wall -Werror -fno-warn-name-shadowing
  default-language: Haskell2010
  main-is: Listen.hs
  build-depends:
    base >= 3 && < 5,
    mtl -any,
    aeson -any,
    postgresql-simple -any,
    wai-handler-fastcgi -any,
    vorple -any
  default-extensions:
    OverloadedStrings
    RecordWildCards
    TemplateHaskell

Executable vorple-example-simple
  hs-source-dirs: example
  ghc-options: -Wall -Werror -fno-warn-name-shadowing
  default-language: Haskell2010
  main-is: Simple.lhs
  build-depends:
    base >= 3 && < 5,
    mtl -any,
    warp -any,
    vorple -any
  default-extensions:
    TemplateHaskell

