
name: vorple
version: 0.1.0.1
cabal-version: >= 1.10
build-type: Simple
license: GPL
license-file: LICENSE
copyright: (c) 2012 Karl Voelker
stability: unstable
homepage: https://github.com/ktvoelker/vorple
maintainer: Karl Voelker <ktvoelker@gmail.com>
synopsis: A simple web framework
description:
  Vorple is a simple web framework for Haskell. You may want to start by looking
  at the example, "Web.Vorple.Example", before looking at the API in "Web.Vorple".
category: Web
author: Karl Voelker <ktvoelker@gmail.com>
data-files:
  data/effective_tld_names.dat

Flag examples
  Description: Build example programs
  Default: False
  Manual: True

Library
  build-depends:
    base >= 4 && < 5,
    mtl >= 2.1 && < 2.2,
    template-haskell >= 2.7 && < 2.8,
    text >= 0.11 && < 0.12,
    bytestring >= 0.9 && < 0.10,
    blaze-builder >= 0.3 && < 0.4,
    dataenc >= 0.14 && < 0.15,
    Crypto >= 4.2 && < 4.3,
    random >= 1.0 && < 1.1,
    aeson >= 0.6 && < 0.7,
    conduit >= 0.5 && < 0.6,
    attoparsec-conduit >= 0.5 && < 0.6,
    http-types >= 0.7 && < 0.8,
    cookie >= 0.4 && < 0.5,
    wai >= 1.3 && < 1.4
  exposed-modules:
    Web.Vorple
    Web.Vorple.Example
  other-modules:
    Web.Vorple.Cookie
    Web.Vorple.Log
    Web.Vorple.Text
    Web.Vorple.Types
    Web.Vorple.Util
  hs-source-dirs: src
  ghc-options: -Wall -Werror -fno-warn-name-shadowing
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    UndecidableInstances

Test-Suite vorple-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror -fno-warn-name-shadowing -fno-warn-missing-signatures
  default-language: Haskell2010
  main-is: Test.hs
  other-modules:
    Util
    Paths_vorple
  build-depends:
    base >= 4 && < 5,
    HUnit >= 1.2 && < 1.3,
    wai-test >= 1.3 && < 1.4,
    mtl >= 2.1 && < 2.2,
    text >= 0.11 && < 0.12,
    aeson >= 0.6 && < 0.7,
    http-types >= 0.7 && < 0.8,
    wai >= 1.3 && < 1.4,
    cookie-jar >= 0.2 && < 0.3,
    time >= 1.4 && < 1.5,
    vorple -any
  default-extensions:
    OverloadedStrings
    RecordWildCards
    TemplateHaskell

Executable vorple-example-simple
  if flag(examples)
    buildable: True
  else
    buildable: False
  hs-source-dirs: example
  ghc-options: -Wall -Werror -fno-warn-name-shadowing
  default-language: Haskell2010
  main-is: Simple.lhs
  build-depends:
    base >= 4 && < 5,
    mtl >= 2.1 && < 2.2,
    warp >= 1.3 && < 1.4,
    vorple -any
  default-extensions:
    TemplateHaskell

